--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "pnc-student-website",
   "version": "0.1.0",
@@ -6,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
